fix references outside of the Noodall namedscope

--- a/app/views/layouts/noodall_admin.html.erb
+++ b/app/views/layouts/noodall_admin.html.erb
@@ -55,7 +55,7 @@
     </ul>
     <!-- end navigation -->
 
-    <% #flash_messages %>
+    <%= flash_messages %>
 
     <div id="content">
         <%= yield %>
