--- a/demo/views/layouts/application.html.erb
+++ b/demo/views/layouts/application.html.erb
@@ -53,7 +53,7 @@ maximum-scale = 1.0 retains dimensions instead of zooming in if page width < dev
     google.load("swfobject", "2.2");
   </script>
   
-  <%= javascript_include_tag 'cufon-yui', 'fancybox', 'application', :cache => "global" %>
+  <%= javascript_include_tag 'cufon-yui', 'fancybox', 'carousel.lite', 'application', :cache => "global" %>
   
   
 <!-- so:JavaScripts -->
