--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -1,45 +1,31 @@
 /* -------------- LAYOUT -------------- */
 /* margin, height, width etc */
-
 /*Hidden*/
-a.skip {display:none;}
+a.skip {
+  display: none; }
 
 /* -------------- HEADER -------------- */
-#wrapper{
+#wrapper {
   width: 960px;
-  margin: 0 auto;
-}
+  margin: 0 auto; }
 
 /* -------------- HEADER -------------- */
-
 /* -------------- NAVIGATION -------------- */
-
 /* -------------- MAIN CONTENT -------------- */
-
 /* -------------- SUPPORTING CONTENT -------------- */
-
 /* -------------- TEMPLATES -------------- */
-
 /* -------------- COMPONENTS -------------- */
-
 /* -------------- FOOTER -------------- */
-
 /* -------------- ARTICLES -------------- */
-
 /* Comments */
-
 /* Pagination */
-
 /* -------------- ERRORS -------------- */
-
 /* -------------- JQUERY and CSS3 -------------- */
-
 /* -------------- CLEARFIX -------------- */
-
-{
+/*{
   content: ".";
   display: block;
   height: 0;
   clear: both;
   visibility: hidden;
-}
+}*/
