--- a/app/views/noodall/admin/assets/_browser.html.erb
+++ b/app/views/noodall/admin/assets/_browser.html.erb
@@ -9,7 +9,7 @@
         <%= (asset.image? or asset.video?) ? image_tag( asset.url('100x100#', :jpg)  ) : asset_icon(asset) %>
       </div>
       
-      <%= link_to 'Show', admin_asset_path(asset, :readonly => readonly), :class => 'show button', :title => 'View this asset' %>
+      <%= link_to 'Show', noodall_admin_asset_path(asset, :readonly => readonly), :class => 'show button', :title => 'View this asset' %>
       <%= link_to 'Add', asset.url, :class => 'add button', :title => 'Add this asset' %>
     </li>
   <% end %>
@@ -23,6 +23,6 @@
     <li><%= link_to "#{h( tag.name )} (#{tag.count})", :tag => tag.name  %></li>
 <% end -%>
   </ul>
-  <%= link_to 'All Tags', admin_asset_tags_path(controller.action_name) %>
+  <%= link_to 'All Tags', noodall_admin_asset_tags_path(controller.action_name) %>
 </div>
 
