--- a/app/views/noodall/admin/assets/_form.html.erb
+++ b/app/views/noodall/admin/assets/_form.html.erb
@@ -1,6 +1,6 @@
 <%= render 'menu' %>
 
-<% form_for([:admin, @asset], :html => { :multipart => true, :id => ( 'uploader' if @asset.new_record? ) } ) do |f| %>
+<% form_for([:noodall, :admin, @asset], :html => { :multipart => true, :id => ( 'uploader' if @asset.new_record? ) } ) do |f| %>
 <div id="main-form">
   <%= f.error_messages %>
   <%= hidden_field_tag :pending, true if params[:pending] || controller.action_name == "pending" %>
@@ -35,7 +35,7 @@
   <p class="fixed-form">
     <%= f.submit @asset.new_record? ? 'Create' : 'Update', :disable_with => 'Submitting...', :class => 'update' %>
 
-    <%= link_to 'Delete', admin_asset_path(@asset, :pending => true), :confirm => 'Are you sure?', :method => :delete, :class => 'delete', :title => 'Delete this asset' if params[:pending] || controller.action_name == "pending" %>
+    <%= link_to 'Delete', noodall_admin_asset_path(@asset, :pending => true), :confirm => 'Are you sure?', :method => :delete, :class => 'delete', :title => 'Delete this asset' if params[:pending] || controller.action_name == "pending" %>
     <%= link_to 'Cancel', admin_assets_type_url(@asset), :class => 'cancel' %>
   </p>
 </div>
