--- a/app/views/noodall/admin/assets/_show.html.erb
+++ b/app/views/noodall/admin/assets/_show.html.erb
@@ -15,14 +15,14 @@
     <p><strong>File Size:</strong> <%= number_to_human_size( @asset.file_size ) %></p>
     <p><strong>Description:</strong> <%= @asset.description %></p>
 <% unless readonly %>
-    <p><%= link_to "Edit '#{@asset.title}'", edit_admin_asset_path(@asset), :title => "Edit '#{@asset.title}'" , :class => 'edit' %></p>
+    <p><%= link_to "Edit '#{@asset.title}'", edit_noodall_admin_asset_path(@asset), :title => "Edit '#{@asset.title}'" , :class => 'edit' %></p>
 <% end %>
 
     <h2>Used <%= @asset.log_entries.count %> times</h2>
     <ul id="asset-usage">
       <% for entry in @asset.log_entries %>
       <% unless entry.node.nil? %>
-      <li><%= link_to entry.node.title, admin_node_path(entry.node) %> - <%= entry.location %></li>
+      <li><%= link_to entry.node.title, noodall_admin_node_path(entry.node) %> - <%= entry.location %></li>
       <% end -%>
       <% end -%>
     </ul>
@@ -41,7 +41,7 @@
     <% elsif !readonly -%>
   <div id="no-tags">
     <h2>'<%= @asset.title %>' Tags</h2>
-    <p>This asset has no tags, <%= link_to 'click here', edit_admin_asset_path(@asset), :title => 'Edit Tags' %> to add them.</p>
+    <p>This asset has no tags, <%= link_to 'click here', edit_noodall_admin_asset_path(@asset), :title => 'Edit Tags' %> to add them.</p>
   </div>
   <% end -%>
 
