Remove caching for heroku

--- a/app/views/layouts/noodall_admin.html.erb
+++ b/app/views/layouts/noodall_admin.html.erb
@@ -28,7 +28,7 @@
   google.load("jquery", "1.4");
   google.load("jqueryui", "1.8");
 </script>
-<%= javascript_include_tag 'cufon-yui', 'admin/gotham.font', 'fancybox', 'ajaxify', 'admin/application', :cache => 'admin_global' %>
+<%= javascript_include_tag 'cufon-yui', 'admin/gotham.font', 'fancybox', 'ajaxify', 'admin/application' %>
 
 <%= yield :header %>
 
