Component testing in demo app

--- a/app/views/noodall/admin/nodes/show.html.erb
+++ b/app/views/noodall/admin/nodes/show.html.erb
@@ -115,9 +115,9 @@
 
   <div id="sub-form">
 
-<h2>Page Modules</h2>
+<h2>Page Components</h2>
 
-<span class="tooltip" title="Please choose where you would like to place each module">&nbsp;</span>
+<span class="tooltip" title="Please choose where you would like to place each component">&nbsp;</span>
 
 <%= yield :component_table %>
 <% if can_publish?(@node) %>
