--- a/app/views/noodall/admin/nodes/_slot_form.html.erb
+++ b/app/views/noodall/admin/nodes/_slot_form.html.erb
@@ -8,7 +8,7 @@
         <%= render :partial => "admin/components/#{ component.class.name.underscore.downcase }", :locals => {:component => component, :slot_name => slot_name } unless component.nil? %>
       </div>
       <div class="component_buttons">
-        <span class="button form-save" href="#" title="Set this information and close.">Save</span>
+        <button class="button form-save" href="#" title="Set this information and close.">Save</button>
         <span class="button form-delete" href="#" title="Remove information and close.">Delete</span>
         <span class="button form-reset" href="#" title="Reset information to last saved state">Cancel</span>
       </div>
