--- a/demo/views/admin/components/_promo.html.erb
+++ b/demo/views/admin/components/_promo.html.erb
@@ -1,13 +1,15 @@
-<% fields_for :node do |n| %>
-<%   n.fields_for slot_name, component do |f| %>
-
-  <%= error_messages_for :object => component %>
+<%= fields_for :node do |n| %>
+<%=   n.fields_for slot_name, component do |f| %>
 
   <%= f.hidden_field :_type %>
 
   <p>
     <%= f.label :title, "Title" %><br />
     <span class="input-wrap"><%= f.text_field :title %></span>
+  </p>
+  <p>
+    <%= f.label :description %><br />
+    <span class="input-wrap"><%= f.text_area :description, :cols => 40, :rows => 4 %></span>
   </p>
 
   <p class="file-selectable">
@@ -20,9 +22,9 @@
   </p>
 
   <p>
-    <%= f.label :url, 'Url' %><br />
+    <%= f.label :link %><br />
     <span class="input-wrap">
-      <%= f.text_field :url %><br/>
+      <%= f.text_field :link %><br/>
       <span class="link-node">Content</span> |
       <span class="link-asset">Asset</span>
     </span>
