Editor Asset insertion

--- a/app/views/noodall/admin/assets/index.js.erb
+++ b/app/views/noodall/admin/assets/index.js.erb
@@ -1,1 +1,1 @@
-$('#asset-browser').html( "<%= escape_javascript(%{<h2 class="title">#{admin_page_title}</h2> #{render( 'browser')}}) %>" )
+$('#asset-browser').html( "<%= escape_javascript(%{<h2 class="title">#{admin_page_title}</h2> #{render( 'browser')}}).html_safe %>" )
