--- a/demo/views/nodes/page_b.html.erb
+++ b/demo/views/nodes/page_b.html.erb
@@ -2,7 +2,7 @@
 
 <%= component(@node, 'main_slot_0') %>
 
-<div id="body"><%= @node.body %></div>
+<div id="body"><%= @node.body.html_safe %></div>
 
 <%= component(@node, 'wide_slot_0') %>
 <%= component(@node, 'wide_slot_1') %>
