--- a/demo/views/admin/components/_gallery.html.erb
+++ b/demo/views/admin/components/_gallery.html.erb
@@ -1,26 +1,49 @@
-<% fields_for :node do |f| %>
-<%   f.fields_for slot_name, component do |c| %>
-<div class="multi-file-component">
-  <%= c.hidden_field :_type %>
-  <fieldset class="multi-file-details">
-    <legend>Gallery Details</legend>
-    <p>
-      <%= c.label :title, "Title" %><br />
-      <span class="input-wrap"><%= c.text_field :title %></span>
-    </p>
+<%= fields_for :node do |f| %>
+  <%=   f.fields_for slot_name, component do |c| %>
+    <div class="multi-file-component">
+      <%= c.hidden_field :_type %>
+      <fieldset class="multi-file-details">
+        <legend>Gallery Details</legend>
+        <p>
+          <%= c.label :title %><br />
+          <span class="input-wrap"><%= c.text_field :title %></span>
+        </p>
 
-    <p>
-      <%= c.label :body, "Description" %><br />
-      <span class="input-wrap"><%= c.text_area :body, :rows => 4 %></span>
-    </p>
-<% unless slot_name =~ /small/ %>
-    <p>
-      <%= c.label :style %><br />
-      <span class="input-wrap"><%= c.select :style, ['widget', 'list'] %></span>
-    </p>
-<% end -%>
-  </fieldset>
-<%= render :partial => 'admin/components/multi_file_images', :locals => { :component => component, :slot_name => slot_name } %>
-</div>
-<%   end
-   end %>
+        <p>
+          <%= c.label :description %><br />
+          <span class="input-wrap"><%= c.text_area :description, :rows => 4 %></span>
+        </p>
+      </fieldset>
+      <fieldset class="multi-file-files images">
+        <legend>Images</legend>
+        <p><span class="add-multi-asset">Add File</span><span class="types">Images</span></p>
+        <ol>
+          <% component.assets.each_with_index do |asset,i| %>
+            <li class="multi-file file-selectable">
+              <span class="file-detail"><%= image_tag( asset.url('70x70#', :jpg) ) %></span>
+              <span class="delete" title="Remove this file">Delete</span>
+              <span class="edit" title="Edit this file">Edit</span>
+              <div class="file-form">
+                <p>
+                  <span class="select-file">Select File</span>
+                  (<span class="types">Images</span>)
+                  <%= hidden_field_tag "node[#{slot_name}][asset_ids][]", asset.id, :id => "node_#{slot_name}_asset_id_#{i}", :class => "asset_id" %>
+                </p>
+              </div>
+            </li>
+          <% end %>
+          <li class="multi-file file-selectable">
+            <span class="delete" title="Remove this file">Delete</span>
+            <span class="edit" title="Edit this file">Edit</span>
+            <div class="file-form">
+              <p>
+                <span class="select-file">Select File</span>
+                (<span class="types">Images</span>)
+                <%= hidden_field_tag "node[#{slot_name}][asset_ids][]", '', :id => nil, :class => "asset_id" %>
+              </p>
+            </div>
+          </li>
+        </ol>
+    </fieldset></div>
+  <%   end
+end %>
