--- a/demo/views/components/_gallery.html.erb
+++ b/demo/views/components/_gallery.html.erb
@@ -4,21 +4,20 @@
   <div class="carousel-wrap">
     <div class="carousel">
       <ul class="gallery <%= component.style %>">
-        <% for image in component.contents.reject{|c| c.asset.nil? } %>
+        <% for image in component.assets %>
           <li>
             <%= link_to(
-              image_tag(image.asset.url('100x100#', :jpg), :alt => h(image.description.blank? ? image.asset.description : image.description)),
-              (image.url.blank? ? image.asset.url('800x600', :jpg) : image.url),
-              :title => h(image.title.blank? ? image.asset.title : image.title),
+              image_tag(image.url('100x100#', :jpg), :alt => image.description),
+              image.url('800x600', :jpg),
+              :title => image.title,
               :target => '_blank',
-              :rel => 'gallery',
-              :class => (image.url.blank? ? 'lightbox' : '')) %>
+              :rel => 'gallery') %>
           </li>
         <% end  %>
       </ul>
     </div>
   </div>
 
-  <p><%= component.body %></p>
+  <p><%= component.description %></p>
 
 </div>
