--- a/public/stylesheets/admin/layout.css
+++ b/public/stylesheets/admin/layout.css
@@ -534,11 +534,14 @@ a.child-no {
         clear: both;
 }
 
-.file-selectable span.file-detail {
+.file-selectable .file-detail {
   float: left;
-  width: 100px;
+  width: 70px;
   padding: 3px;
   margin-right: 5px;
+}
+.file-selectable .file-detail .file-title {
+  display: none;
 }
 
 .multi-file span.edit, .multi-file span.delete {
