--- a/app/views/noodall/admin/assets/_menu.html.erb
+++ b/app/views/noodall/admin/assets/_menu.html.erb
@@ -1,5 +1,6 @@
 <ul class="choices">
-  <%= content_tag :li, link_to( 'Back', nil ), :class => 'back' if params[:allowed_types] %>
+  <%= content_tag :li, '<a>Done</a>'.html_safe, :class => 'action' if params[:mode] == 'multi' %>
+  <%= content_tag :li, '<a>Cancel</a>'.html_safe, :class => 'cancel' %>
   <li class="upload"><%= link_to 'Upload', new_noodall_admin_asset_path(:readonly => readonly) %></li>
   <%= content_tag :li, link_to( 'Images', noodall_admin_assets_path(:readonly => readonly) ), :class => 'images' if params[:allowed_types].blank? or params[:allowed_types].include?('images') %>
   <%= content_tag :li, link_to( 'Documents', documents_noodall_admin_assets_path(:readonly => readonly) ), :class => 'documents' if params[:allowed_types].blank? or params[:allowed_types].include?('documents') %>
