--- a/demo/views/layouts/application.html.erb
+++ b/demo/views/layouts/application.html.erb
@@ -53,8 +53,8 @@ maximum-scale = 1.0 retains dimensions instead of zooming in if page width < dev
     google.load("swfobject", "2.2");
   </script>
   
-  <%= javascript_include_tag 'cufon-yui', 'fancybox', 'carousel.lite', 'application' %>
-  
+  <%= javascript_include_tag 'rails', 'cufon-yui', 'fancybox', 'carousel.lite', 'application' %>
+  <%= csrf_meta_tag %>
   
 <!-- so:JavaScripts -->
 
