--- a/app/views/noodall/admin/nodes/show.html.erb
+++ b/app/views/noodall/admin/nodes/show.html.erb
@@ -1,6 +1,6 @@
 <a class="tooltip" href="/cms_help.pdf">&nbsp;</a>
 
-<% content_for :header, javascript_include_tag( 'tiny_mce/jquery.tinymce', 'admin/tiny_mce_config', 'admin/nodes', 'admin/assets' ) %>
+<% content_for :header, javascript_include_tag( 'tiny_mce/jquery.tinymce.js', 'admin/tiny_mce_config', 'admin/nodes', 'admin/assets' ) %>
 
 
 <h1>Editing Content</h1>
