--- a/app/views/noodall/admin/nodes/show.html.erb
+++ b/app/views/noodall/admin/nodes/show.html.erb
@@ -125,7 +125,7 @@
 <span class="tooltip" title="Please choose where you would like to place each component">&nbsp;</span>
 
 <%= yield :component_table %>
-<% if can_publish?(@node) %>
+<% if can_publish?(@node) and !@node.is_a?(Home) %>
 <%= link_to "Change Template", change_template_noodall_admin_node_path(@node), :class => 'change' %>
 <% end -%>
 <div id="modules-list">
