Fix html rendering for "all tags" via AJAX

--- a/app/views/noodall/admin/assets/tags.js.erb
+++ b/app/views/noodall/admin/assets/tags.js.erb
@@ -1,1 +1,1 @@
-$('#asset-browser').html( "<%= escape_javascript(%{<h2 class="title">#{page_title}</h2> #{render( 'tags' )}}) %>" )
+$('#asset-browser').html( "<%= escape_javascript(%{<h2 class="title">#{page_title}</h2> #{render( 'tags' )}}.html_safe) %>" )
