Remove 100 as lising option as it puts such a load on the server if none of the thumbnails are cached

--- a/app/views/noodall/admin/assets/index.html.erb
+++ b/app/views/noodall/admin/assets/index.html.erb
@@ -39,7 +39,7 @@
 </table>
 
   <ul id="per-page-select">
-<% for quant in [10, 20, 50, 100] %>
+<% for quant in [10, 20, 50] %>
     <li<%= (quant == 10 ? ' class="first"' : '') %>><%= link_to quant, params.merge(:limit => quant)  %></li>
 <% end %>
   </ul>
