--- a/public/stylesheets/admin/ie.css
+++ b/public/stylesheets/admin/ie.css
@@ -104,7 +104,7 @@ th .tooltip {
   top:-15px !important;
 }
 
-.pagination .prev_page,
+.pagination .previous_page,
 .pagination .next_page {
   display:block !important;
 }
