--- a/lib/generators/noodall/component/templates/template.html.erb
+++ b/lib/generators/noodall/component/templates/template.html.erb
@@ -1,4 +1,4 @@
-<div id="<%%= slot_code %>" class="component promo <%%= 'double' if expand %> <%%= additional_classes %>">
+<div id="<%%= slot_code %>" class="component <%= file_name.gsub(/_/ig, '-') %> <%%= 'double' if expand %> <%%= additional_classes %>">
 <% unless attributes.empty? %>
   <dl>
   <% for attribute in attributes -%>
