Adding support for protected views using canable

--- a/app/views/noodall/admin/nodes/show.html.erb
+++ b/app/views/noodall/admin/nodes/show.html.erb
@@ -105,6 +105,10 @@
                   <th><%= f.label :destroyable_groups_list, "Delete" %></th>
                   <td><%= f.text_field :destroyable_groups_list, :class => "groups-completer" %></td>
                 </tr>
+                <tr>
+                  <th><%= f.label :viewable_groups_list, "View" %></th>
+                  <td><%= f.text_field :viewable_groups_list, :class => "groups-completer" %></td>
+                </tr>
               </tbody>
             </table>
             </span>
