--- a/demo/views/layouts/application.html.erb
+++ b/demo/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 
 <!--
-  HTML5 - When your ready to do so 
+  HTML5 - When your ready to do so
   <!doctype html>
   <html lang="en">
 -->
@@ -12,12 +12,12 @@
 
 <title><%#= Settings.site_name %> - <%= page_title %></title>
 
-<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame 
+<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
      Remove this if you use the .htaccess -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 <!--  Mobile Viewport Fix
-      j.mp/mobileviewport & davidbcalhoun.com/2010/viewport-metatag 
+      j.mp/mobileviewport & davidbcalhoun.com/2010/viewport-metatag
 device-width : Occupy full width of the screen in its current orientation
 initial-scale = 1.0 retains dimensions instead of zooming out if page height > device height
 maximum-scale = 1.0 retains dimensions instead of zooming in if page width < device width
@@ -52,16 +52,16 @@ maximum-scale = 1.0 retains dimensions instead of zooming in if page width < dev
     google.load("jquery", "1.4");
     google.load("swfobject", "2.2");
   </script>
-  
+
   <%= javascript_include_tag 'rails', 'cufon-yui', 'fancybox', 'carousel.lite', 'application' %>
   <%= csrf_meta_tag %>
-  
+
 <!-- so:JavaScripts -->
 
 <%= yield :head %>
 
-<!-- 
-    Asynchronous google analytics: mathiasbynens.be/notes/async-analytics-snippet 
+<!--
+    Asynchronous google analytics: mathiasbynens.be/notes/async-analytics-snippet
     change the UA-XXXXX-X to be your site's ID
     Now at the top cos google said so!
 -->
@@ -95,6 +95,7 @@ maximum-scale = 1.0 retains dimensions instead of zooming in if page width < dev
     <!-- so:main-navigation -->
 
     <div id="content">
+      <%= flash_messages %>
       <%= yield %>
     </div>
 
@@ -102,7 +103,7 @@ maximum-scale = 1.0 retains dimensions instead of zooming in if page width < dev
       <%= text_field_tag :q, params[:q], :value => 'Enter keyword(s) here'  %>
       <%= submit_tag 'Search' %>
     <% end %>
-    
+
     <div id="footer">
       <!-- so:main-navigation -->
         <ul class="nav" id="footer-nav">
