--- a/app/views/noodall/admin/nodes/index.html.erb
+++ b/app/views/noodall/admin/nodes/index.html.erb
@@ -59,7 +59,7 @@
       <th>Title</th>
       <th>Type</th>
       <th colspan="2">Arrange</th>
-      <th width="100"># Sub-Section</th>
+      <th width="100">Sub-Section</th>
       <th>Updated</th>
       <th width="45">Show</th>
       <th width="45">Published</th>
